--- a/BlazingTrails/BlazingTrails.Client/wwwroot/index.html
+++ b/BlazingTrails/BlazingTrails.Client/wwwroot/index.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BlazingTrails.Client</title>
+    <title>Blazing Trails</title>
     <base href="/" />
     <link rel="preload" id="webassembly" />
     <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="css/app.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
-    <link href="BlazingTrails.Client.styles.css" rel="stylesheet" />
     <script type="importmap"></script>
 </head>
 
